; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/regex/extr_test.c__main.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/regex/extr_test.c__main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"^hi\00", align 1
@R_REGEX_NOSUB = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"error\0A\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"patata\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"out = %d\0A\00", align 1
@.str.4 = private unnamed_addr constant [7 x i8] c"hillow\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @R_REGEX_NOSUB, align 4
  %4 = call i32 @r_regex_comp(i32* %1, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %3)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  br label %16

9:                                                ; preds = %0
  %10 = call i32 @r_regex_exec(i32* %1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 0, i32 0, i32 0)
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32 %11)
  %13 = call i32 @r_regex_exec(i32* %1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.4, i64 0, i64 0), i32 0, i32 0, i32 0)
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* %2, align 4
  %15 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %9, %7
  %17 = call i32 @r_regex_free(i32* %1)
  ret i32 0
}

declare dso_local i32 @r_regex_comp(i32*, i8*, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @r_regex_exec(i32*, i8*, i32, i32, i32) #1

declare dso_local i32 @r_regex_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
